--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -5,9 +5,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Timer and Countdown</title>
 <link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body>
 <h1>Timer and Countdown</h1>
+<div class="container mt-5">
+    <div class="row">
+        <div class="col">
+            <input type="number" id="hours" class="form-control" placeholder="Horas" min="0" max="23">
+            <span id="errorHours" class="text-danger"></span>
+        </div>
+        <div class="col">
+            <input type="number" id="minutes" class="form-control" placeholder="Minutos" min="0" max="59">
+            <span id="errorMinutes" class="text-danger"></span>
+        </div>
+        <div class="col">
+            <input type="number" id="seconds" class="form-control" placeholder="Segundos" min="0" max="59">
+            <span id="errorSeconds" class="text-danger"></span>
+        </div>
+    </div>
+    <button id="startBtn" class="btn btn-primary mt-3">Start</button>
+    <button id="clearBtn" class="btn btn-secondary mt-3">Clear</button>
+</div>
 <script src="script.js"></script>
 </body>
 </html>
